# zhuxian-catch

./: .env.example  .gitignore  README.md  daily_review_interpretation_protocol.md  daily_review_reading_guide.md  dp-xiangmu.md  pyproject.toml  xiangmu.md  港股通主线研究系统_项目规则.md
.workbuddy/memory/: 2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-07.md  2026-06-08.md  MEMORY.md
artifacts/: a_share_cache_audit_2021-01-04_2026-05-29.md  a_share_cache_audit_2024-01-02_2026-05-29.md
config/: catalyst_keywords.csv
data/: positions.md  sector_etf_map.csv
data/catalysts/: catalyst_titles.csv
scripts/: analyze_2024_concept_blind_replay.py  analyze_2024_mainline_blind_replay.py  backfill_etf_daily.py  backtest_catalyst_proxy.py  blind_replay.py  generate_daily_review.py  mainline_beta_backtest_v1.py  mainline_beta_backtest_v1_full.py  render_daily_review_html.py  research_run_cards.py  run_daily_review_job.py  run_daily_review_manual.py  snapshot_concept_members.py  sync_catalysts.py  update_shadow_mainline_account.py  validate_mainline_early_detection.py
skills/: README.md  catalyst_review_skill.md  codex_instruction_skill.md  concept_resonance_skill.md  daily_review_skill.md  early_mainline_validation_skill.md  retreat_validation_skill.md  shadow_mainline_account_skill.md  third_party_review_skill.md
src/ashare_a_plus/: __init__.py  backtest.py  cli.py  config.py  contraction_study.py  data.py  (+7 more)
tests/: test_backtest.py  test_contraction_study.py  test_data.py  test_etf_map.py  test_event_study.py  test_forward_study.py  test_indicators.py  test_sqlite_store.py
(+7 files in other folders)
