[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-a-plus-backtester"
version = "0.1.0"
description = "Mechanical A-share A+ resonance strategy backtester."
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "akshare>=1.13",
  "tushare>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
ashare-a-plus = "ashare_a_plus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
